Fixed Messages component layout issue

--- a/metroui-vue/components/Messages/style.less
+++ b/metroui-vue/components/Messages/style.less
@@ -95,6 +95,7 @@
 		button {
 			width: 40px;
 			height: 40px;
+			margin: 2px 0;
 			
 			&:not(:active),
 			&[disabled] {
